--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class='list'>
         <dl>
           <dt>Swap</dt>
-          <dd>Trade assets directly from user’s wallet. Platform supports all kinds of trading pairs</dd>
+          <dd>Trade assets directly from user’s wallet Platform supports all kinds of trading pairs</dd>
         </dl>
         <dl>
           <dt>Wrapper</dt>
@@ -55,7 +55,7 @@
         </dl>
         <dl>
           <dt>Governance</dt>
-          <dd>Being a parachain on Polkadot’s network of interoperable specialized blockchains allows Clover to scale seamlessly</dd>
+          <dd>Being an open platform and get other people to contribute modules，including propose, vote and implement changes</dd>
         </dl>
       </div>
     </div>
@@ -108,15 +108,15 @@
       <div class='right section-service'>
         <dl>
           <dt>Dapp Layer</dt>
-          <dd>(Swap 、Lending、Aggregator、Third Party Apps)</dd>
+          <dd>Swap、Lending、Aggregator、Third Party Apps</dd>
         </dl>
         <dl>
           <dt>Tools</dt>
-          <dd>(Wallet 、Block Explorer、Polkadot JS...)</dd>
+          <dd>Wallet、Block Explorer、Polkadot JS...</dd>
         </dl>
         <dl>
           <dt>Protocol Layer</dt>
-          <dd>(Protocol External 、Smart Contract...)</dd>
+          <dd>Protocol External、Smart Contract...</dd>
         </dl>
         <dl>
           <dt>Clover Chain</dt>
