--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
   <div class='back-black'>
     <div class='content about-main'>
       <h2>Next-generation services for the next of wave of DeFi users</h2>
-      <p>Clover is a DeFi ecosystem offering fully decentralized on-chain trading, a decentralized money market for lending and borrowing as well as a staking liquidity protocol. Built as a parachain on Polkadot, it is fast, cheap and secure and allows for cross-chain swaps. Clover is run by the community via on-chain governance and distributes profits to BXB token holders.</p>
+      <p>Clover is a DeFi ecosystem offering fully decentralized on-chain trading, a decentralized money market for lending and borrowing as well as a staking liquidity protocol. Built as a parachain on Polkadot, it is fast, cheap and secure and allows for cross-chain swaps. Clover is run by the community via on-chain governance and distributes profits to BXB token holders</p>
       <a class='button' href='https://swap.ownstack.cn/' target='_blank'>Try CloverSwap</a>
     </div>
   </div>
@@ -37,15 +37,15 @@
     <div class='right'>
       <dl>
         <dt>Intuitive</dt>
-        <dd>Trades are settled automatically at a price determined by the liquidity of the two assets of a pair via an automated market maker (AMM).</dd>
+        <dd>Trades are settled automatically at a price determined by the liquidity of the two assets of a pair via an automated market maker (AMM)</dd>
       </dl>
       <dl>
         <dt>Provide liquidity</dt>
-        <dd>The default fee is set to 0.3% and will be proportionally distributed to liquidity providers.</dd>
+        <dd>The default fee is set to 0.3% and will be proportionally distributed to liquidity providers</dd>
       </dl>
       <dl>
         <dt>Open</dt>
-        <dd>Any trading pair can be supported after a governance vote.</dd>
+        <dd>Any trading pair can be supported after a governance vote</dd>
       </dl>
     </div>
   </div>
@@ -54,15 +54,15 @@
       <div class='left'>
         <dl>
           <dt>Earn interest</dt>
-          <dd>Deposit assets to lend them out to others and receive interest in return.</dd>
+          <dd>Deposit assets to lend them out to others and receive interest in return</dd>
         </dl>
         <dl>
           <dt>Borrow funds</dt>
-          <dd>Provide collateral (including staked assets via our staking liquidity protocol) to receive a loan in supported tokens. Allows you to put your assets to work, leverage your longs or build a short position on an asset.</dd>
+          <dd>Provide collateral (including staked assets via our staking liquidity protocol) to receive a loan in supported tokens. Allows you to put your assets to work, leverage your longs or build a short position on an asset</dd>
         </dl>
         <dl>
           <dt>Algorithmically controlled</dt>
-          <dd>The interest rate is set dynamically depending on supply and demand dynamics.</dd>
+          <dd>The interest rate is set dynamically depending on supply and demand dynamics</dd>
         </dl>
       </div>
       <div class='right'>
@@ -77,15 +77,15 @@
     <div class='right'>
       <dl>
         <dt>Liquid</dt>
-        <dd>The protocol tokenizes staked assets to make them tradeable. Stake tokens (e.g. DOT) in a pool and receive pool tokens (e.g. SDOT) representing your share of the total amount in the pool.</dd>
+        <dd>The protocol tokenizes staked assets to make them tradeable. Stake tokens (e.g. DOT) in a pool and receive pool tokens (e.g. SDOT) representing your share of the total amount in the pool</dd>
       </dl>
       <dl>
         <dt>Unlocking the value of staked assets</dt>
-        <dd>Use your pool tokens in other protocols across all chains on the Polkadot network. For instance, use them as collateral to borrow assets on our money market protocol.</dd>
+        <dd>Use your pool tokens in other protocols across all chains on the Polkadot network. For instance, use them as collateral to borrow assets on our money market protocol</dd>
       </dl>
       <dl>
         <dt>Algorithmically secured</dt>
-        <dd>The collateralization rate is determined by an algorithm to increase capital efficiency without sacrificing security.</dd>
+        <dd>The collateralization rate is determined by an algorithm to increase capital efficiency without sacrificing security</dd>
       </dl>
     </div>
   </div>
