--- a/token.html
+++ b/token.html
@@ -40,11 +40,11 @@
       <div class='content-info'>
         <dl>
           <dt>Total Supply</dt>
-          <dd>800 million Clover (CLV) tokens will be created through a token generation event.</dd>
+          <dd>800 million Clover (CLV) tokens will be created through a token generation event</dd>
         </dl>
         <dl>
           <dt>Liquidity Mining</dt>
-          <dd>The mining speed, release schedule, and other parameters will be determined by the community via governance activities.</dd>
+          <dd>The mining speed, release schedule, and other parameters will be determined by the community via governance activities</dd>
         </dl>
         <dl>
           <dt>Inflation</dt>
@@ -52,7 +52,7 @@
         </dl>
         <dl>
           <dt>Revenue Re-distribution</dt>
-          <dd>All revenue of Clover platform will be re-distributed to users. Events include rewards to CLV staking, CLV burning, incentives to active governing participants and voters, etc.</dd>
+          <dd>All revenue of Clover platform will be re-distributed to users. Events include rewards to CLV staking, CLV burning, incentives to active governing participants and voters, etc</dd>
         </dl>
       </div>
     </div>
@@ -71,13 +71,13 @@
         </div>
         <div class='column'>
           <ul>
-            <li><em>Community Incentive: </em>32 million CLV (40%) will be distributed to community liquidity mining rewards. The mining speed and release schedule will be determined by the community via decentralized governance activities.</li>
-            <li><em>Private Sale: </em>20 million CLV (25%) will be distributed to private sale investors. Among those 25% CLV, 40 million (5%) will be released right after the sales, while the rest 160 million CLV (20%) will be vested with a 1:1 ratio to community incentive release schedule when the Mainnet is launched.</li>
-            <li><em>Initial Parachain Offering: </em>4 million CLV (5%) will be distributed for Polkadot parachain slot auction, also known as Initial Parachain Offering (IPO). To secure a parachain slot, Clover will require supportive DOT holders to lock their DOTs to bid for a slot, and CLV tokens will be distributed as rewards to DOT owners who participant in the IPO successfully. The detailed schedule will be determined when Polkadot starts Parachain slot auction activity.</li>
+            <li><em>Community Incentive: </em>32 million CLV (40%) will be distributed to community liquidity mining rewards. The mining speed and release schedule will be determined by the community via decentralized governance activities</li>
+            <li><em>Private Sale: </em>20 million CLV (25%) will be distributed to private sale investors. Among those 25% CLV, 40 million (5%) will be released right after the sales, while the rest 160 million CLV (20%) will be vested with a 1:1 ratio to community incentive release schedule when the Mainnet is launched</li>
+            <li><em>Initial Parachain Offering: </em>4 million CLV (5%) will be distributed for Polkadot parachain slot auction, also known as Initial Parachain Offering (IPO). To secure a parachain slot, Clover will require supportive DOT holders to lock their DOTs to bid for a slot, and CLV tokens will be distributed as rewards to DOT owners who participant in the IPO successfully. The detailed schedule will be determined when Polkadot starts Parachain slot auction activity</li>
           </ul>
           <ul>
-            <li><em>Clover Team: </em>12 million CLV (15%) will be distributed to the Clover team & advisors. There is a 2-year vesting schedule with an 18-month cliff, meaning that the team & advisors will receive no tokens for 18 months and then will receive 1/24 of the total amount per month over the following 24 months.</li>
-            <li><em>Clover Ecosystem Fund: </em>12 million CLV (15%) will be maintained as ecosystem fund. The fund can be used as grants to projects built within the Clover ecosystem, market liquidity provisions, and other Clover related activities. The usage of reserves will be decided by community governance and determined via voting processes.</li>
+            <li><em>Clover Team: </em>12 million CLV (15%) will be distributed to the Clover team & advisors. There is a 2-year vesting schedule with an 18-month cliff, meaning that the team & advisors will receive no tokens for 18 months and then will receive 1/24 of the total amount per month over the following 24 months</li>
+            <li><em>Clover Ecosystem Fund: </em>12 million CLV (15%) will be maintained as ecosystem fund. The fund can be used as grants to projects built within the Clover ecosystem, market liquidity provisions, and other Clover related activities. The usage of reserves will be decided by community governance and determined via voting processes</li>
           </div>
         </div>
       </div>
