Add Email & Change Text

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   <div class='content column section-main'>
     <div class='left'>
       <h1>CLOVER</h1>
-      <h2>Open DeFi Platform Powered by Polkadot</h2>
-      <p>Clover network is a connector between decentralized assets and centralized exchanges. Powered by Polkadot parachain technology, Clover provides a platform for DeFi applications and cross-chain asset interactions.</p>
+      <h2>Open DeFi Platform</h2>
+      <h2>Powered by Polkadot</h2>
+      <p>A complete trustless trading platform, powered by Polkadot parachain technology, that allows interactions of cross-chain assets and DeFi application. Clover, where a real decentralized environment will be fostered</p>
       <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
     </div>
   </div>
@@ -34,28 +35,28 @@
       <h2>Clover Services</h2>
       <div class='list'>
         <dl>
-          <dt>Swap</dt>
-          <dd>Trade assets directly from user’s wallet Platform supports all kinds of trading pairs</dd>
+          <dt>Swap Protocol</dt>
+          <dd>Trade directly from the user’s wallet without going through a third party.</dd>
         </dl>
         <dl>
-          <dt>Wrapper</dt>
-          <dd>Trustlessly exchange assets between chains with no centralized parties involved</dd>
+          <dt>Wrapper Protocol</dt>
+          <dd>Trade any assets between different chains instantly.</dd>
         </dl>
         <dl>
-          <dt>Vault</dt>
-          <dd>Receive tradeable staking reward, unlocking the derivative value of staked assets</dd>
+          <dt>Vault Protocol</dt>
+          <dd>Receive tradeable staking rewards, unlocking the derivative value of staked assets.</dd>
         </dl>
         <dl>
-          <dt>Lending</dt>
-          <dd>Deposit assets to earn interest or borrow</dd>
+          <dt>Lending Protocol</dt>
+          <dd>Deposit assets to earn interest or borrow.</dd>
         </dl>
         <dl>
-          <dt>Stablecoins</dt>
-          <dd>Support native stablecoin issuance function to fulfill decentralized assets without single point of failure</dd>
+          <dt>Stablecoin Protocol</dt>
+          <dd>Support native stablecoin issuance function.</dd>
         </dl>
         <dl>
-          <dt>Governance</dt>
-          <dd>Being an open platform and get other people to contribute modules，including propose, vote and implement changes</dd>
+          <dt>Governance Application</dt>
+          <dd>Allow users to implement or make changes to modules.</dd>
         </dl>
       </div>
     </div>
@@ -67,27 +68,27 @@
       <div class='more-list'>
         <dl>
           <dt>Scalable</dt>
-          <dd>Clover can scale seamlessly as a parachain of Polkadot. It enables scalability by al-lowing specialized blockchains to communicate with each other in a secure and trustless environment. Clover can communicate with other parachain projects through the Polkadot platform</dd>
+          <dd>Clover can scale seamlessly as a parachain of Polkadot by al-lowing specialized blockchains to communicate with each other in a secure and trustless environment. Clover can communicate with other parachain projects through the Polkadot platform.</dd>
         </dl>
         <dl>
           <dt>Cross-chain</dt>
-          <dd>Allows interoperability with other parachain assets through cross-chain message passing enabled by Polkadot technology. Cross-chain transaction are available and assets can be transferred on different</dd>
+          <dd>Cross-chain transactions are made available through high interoperability between different parachain assets. Interoperability is ensured by Polkadot’s cross-chain message passing technology.</dd>
         </dl>
         <dl>
           <dt>Sustainable</dt>
-          <dd>Instant settlement and low transaction fee. No increasing gas fees and congestions of the network. Friendly to retail users</dd>
+          <dd>Elimination of high gas fee and network congestion. Instant settlement and low transaction fee.</dd>
         </dl>
         <dl>
           <dt>Trustless</dt>
-          <dd>A completely non-custodial P2P trading platform where only account holders can access their own funds. no centralized governance entity. Token holders have control over the system</dd>
+          <dd>A non-custodial, decentralized P2P trading platform that allows only the account holders to access funds.</dd>
         </dl>
         <dl>
           <dt>Private</dt>
-          <dd>Send transactions anonymously without providing any personal information</dd>
+          <dd>Trade transactions anonymously without providing any personal information.</dd>
         </dl>
         <dl>
           <dt>Open Platform</dt>
-          <dd>Developers are encouraged to contribute to modules and applications. Community can propose, vote, and implement changes through decentralized governance module</dd>
+          <dd>Developers are encouraged to contribute to modules and applications. The community can propose, vote, and implement changes through decentralized governance modules.</dd>
         </dl>
       </div>
     </div>
@@ -153,7 +154,6 @@
             <dt>2021 Q1</dt>
             <dd class='type'>Clover Mainnet</dd>
             <dd>Swap protocol</dd>
-            <dd>DEX protocol</dd>
             <dd>Validator incentive program</dd>
           </dl>
           <dl>
