--- a/token.html
+++ b/token.html
@@ -15,12 +15,12 @@
 	<script src='script/jquery.js'></script>
 </head>
 <body class='back-black token'>
-	<div class='head'>
-		<div class='container'>
+  <div class='head'>
+    <div class='content'>
 			<a href='index.html' class='logo'></a>
 			<ul class='nav'>
 			</ul>
-		</div>
+    </div>
 	</div>
   <div class='logo-token'></div>
   <div class='ring'></div>
