--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>CLOVER</h1>
       <h2>Open DeFi Platform</h2>
       <h2>Powered by Polkadot</h2>
-      <p>A complete trustless trading platform, powered by Polkadot parachain technology, that allows interactions of cross-chain assets and DeFi application. Clover, where a real decentralized environment will be fostered</p>
+      <p>A complete trustless trading platform powered by Polkadot parachain technology that allows interactions of cross-chain assets and DeFi application. Clover, where a real decentralized environment will be fostered.</p>
       <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
     </div>
   </div>
@@ -52,7 +52,7 @@
         </dl>
         <dl>
           <dt>Stablecoin Protocol</dt>
-          <dd>Support native stablecoin issuance function.</dd>
+          <dd>Support native stablecoin issuance.</dd>
         </dl>
         <dl>
           <dt>Governance Application</dt>
@@ -68,7 +68,7 @@
       <div class='more-list'>
         <dl>
           <dt>Scalable</dt>
-          <dd>Clover can scale seamlessly as a parachain of Polkadot by al-lowing specialized blockchains to communicate with each other in a secure and trustless environment. Clover can communicate with other parachain projects through the Polkadot platform.</dd>
+          <dd>Clover can scale seamlessly as a parachain of Polkadot by allowing specialized blockchains to communicate with each other in a secure and trustless environment.</dd>
         </dl>
         <dl>
           <dt>Cross-chain</dt>
@@ -76,10 +76,10 @@
         </dl>
         <dl>
           <dt>Sustainable</dt>
-          <dd>Elimination of high gas fee and network congestion. Instant settlement and low transaction fee.</dd>
+          <dd>The elimination of high gas fees and network congestion will allow instant settlement and lower transaction fee.</dd>
         </dl>
         <dl>
-          <dt>Trustless</dt>
+          <dt>Trustless & Secure</dt>
           <dd>A non-custodial, decentralized P2P trading platform that allows only the account holders to access funds.</dd>
         </dl>
         <dl>
