--- a/service.html
+++ b/service.html
@@ -26,7 +26,7 @@
   <div class='back-black'>
     <div class='content about-main'>
       <h2>Next-generation services for the next of wave of DeFi users</h2>
-      <p>Clover is a DeFi ecosystem offering fully decentralized on-chain trading, a decentralized money market for lending and borrowing as well as a staking liquidity protocol. Built as a parachain on Polkadot, it is fast, cheap and secure and allows for cross-chain swaps. Clover is run by the community via on-chain governance and distributes profits to BXB token holders</p>
+      <p>Clover is a DeFi ecosystem offering fully decentralized on-chain trading, a decentralized money market for lending and borrowing as well as a staking liquidity protocol. Built as a parachain on Polkadot, it is fast, cheap and secure and allows for cross-chain swaps. Clover is run by the community via on-chain governance and distributes profits to CLV token holders</p>
       <a class='button' href='https://swap.ownstack.cn/' target='_blank'>Try CloverSwap</a>
     </div>
   </div>
