--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>CLOVER</h1>
       <h2>Open DeFi Platform</h2>
       <h2>Powered by Polkadot</h2>
-      <p>A complete trustless trading platform powered by Polkadot parachain technology that allows interactions of cross-chain assets and DeFi application. Clover, where a real decentralized environment will be fostered.</p>
+      <p>Clover is a DeFi ecosystem supported by Polkadot parachain technology, that offers on-chain trustless trading between different chains. With a value proposition in full transparency and shared growth, Clover will foster a faster and more rigorous environment that allows for more possibilities.</p>
       <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
     </div>
   </div>
@@ -63,7 +63,7 @@
   </div>
   <div class='section-more'>
     <div class='content'>
-      <h2>Why Clover?</h2>
+      <h2>Transform your experience with Clover</h2>
         <div class='back'></div>
       <div class='more-list'>
         <dl>
