--- a/service.html
+++ b/service.html
@@ -25,8 +25,8 @@
   </div>
   <div class='back-black'>
     <div class='content about-main'>
-      <h2>Next-generation services for the next of wave of DeFi users</h2>
-      <p>Clover is a DeFi ecosystem offering fully decentralized on-chain trading, a decentralized money market for lending and borrowing as well as a staking liquidity protocol. Built as a parachain on Polkadot, it is fast, cheap and secure and allows for cross-chain swaps. Clover is run by the community via on-chain governance and distributes profits to CLV token holders</p>
+      <h2>Next-generation DeFi Infrastructure</h2>
+      <p>Clover is a trustless trading platform powered by Polkadot parachain technology, that allows interactions of cross-chain assets and DeFi applications. It is a decentralized money market for lending and borrowing, as well as a liquidity staking protocol. Clover will be governed entirely by its community, and CLV token will derive benefits from Clover’s continuing growth. Together, everyone will contribute to the success of Clover.</p>
       <a class='button' href='https://swap.ownstack.cn/' target='_blank'>Try CloverSwap</a>
     </div>
   </div>
