--- a/partner.html
+++ b/partner.html
@@ -23,7 +23,7 @@
   </div>
   <div class='back-black-gray'>
     <div class='content section-secure' id='more'>
-      <h2>More Opportunities In The Worldwide</h2>
+      <h2>Globlal Opportunities</h2>
       <ul class='data-list'>
         <li>
           <h4>100,000+</h4>
