--- a/service.html
+++ b/service.html
@@ -77,7 +77,7 @@
     <div class='right'>
       <dl>
         <dt>Liquid</dt>
-        <dd>The protocol tokenizes staked assets to make them tradeable. Stake tokens (e.g. DOT) in a pool and receive pool tokens (e.g. SDOT) representing your share of the total amount in the pool</dd>
+        <dd>The protocol tokenizes staked assets to make them tradeable. Stake tokens (e.g. DOT) in a pool and receive pool tokens (e.g. SDOT) representing your share of the total amount in the pool protocol</dd>
       </dl>
       <dl>
         <dt>Unlocking the value of staked assets</dt>
