--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
   </div>
   <div class='back-gray-light'>
     <div class='cotnent section-about'>
-      <h2>A globally distributed teampushing innovation worldwide</h2>
-      <p>Our team is made up of people passionate about disruptive innovations, located in 10+ countries. We believe that diversity and inclusion drive innovation and adoption across the globe</p>
+      <h2>A globally distributed team pushing innovation worldwide.</h2>
+      <p>Our team is made up of people passionate about disruptive innovations, located in 10+ countries. We believe that diversity and inclusion drive innovation and adoption across the globe.</p>
     </div>
   </div>
   <div class='content section-join'>
     <h2>Join our team</h2>
-    <p>We are building a global team of industry experts, specialists, and academics. Become part of the team who had previous experience at Amazon, Oracle, Google, Microsoft, Alibaba, Ethereum,Polkadot, BitGo, and more</p>
+    <p>We are building a global team of industry experts, specialists, and academics. Join us and become part of the team who had previous experience at Amazon, Oracle, Google, Microsoft, Alibaba, Ethereum,Polkadot, BitGo, and more.</p>
   </div>
   <div class='back-gray-light'>
     <div class='content section-office'>
