--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h1>CLOVER</h1>
       <h2>Open DeFi Platform</h2>
       <h2>Powered by Polkadot</h2>
-      <p>Clover is a DeFi ecosystem supported by Polkadot parachain technology, that offers on-chain trustless trading between different chains. With a value proposition in full transparency and shared growth, Clover will foster a faster and more rigorous environment that allows for more possibilities.</p>
+      <p>Clover is a DeFi ecosystem supported by Polkadot parachain technology, which offers on-chain trustless trading services between different chains. Advocating maximum transparency and growth sharing model, Clover will foster a faster and more rigorous environment that allows for more possibilities.</p>
       <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
     </div>
   </div>
@@ -44,7 +44,7 @@
         </dl>
         <dl>
           <dt>Vault Protocol</dt>
-          <dd>Receive tradeable staking rewards, unlocking the derivative value of staked assets.</dd>
+          <dd>Receive tradeable staking rewards and unlock the derivative value of staked assets.</dd>
         </dl>
         <dl>
           <dt>Lending Protocol</dt>
@@ -80,7 +80,7 @@
         </dl>
         <dl>
           <dt>Trustless & Secure</dt>
-          <dd>A non-custodial, decentralized P2P trading platform that allows only the account holders to access funds.</dd>
+          <dd>A non-custodial, decentralized P2P trading platform that only allows the account holders to access funds.</dd>
         </dl>
         <dl>
           <dt>Private</dt>
@@ -109,15 +109,15 @@
       <div class='right section-service'>
         <dl>
           <dt>Dapp Layer</dt>
-          <dd>Swap、Lending、Aggregator、Third Party Apps</dd>
+          <dd>Swap, Lending, Aggregator, Third Party Apps</dd>
         </dl>
         <dl>
           <dt>Tools</dt>
-          <dd>Wallet、Block Explorer、Polkadot JS...</dd>
+          <dd>Wallet, Block Explorer, Polkadot JS...</dd>
         </dl>
         <dl>
           <dt>Protocol Layer</dt>
-          <dd>Protocol External、Smart Contract...</dd>
+          <dd>Protocol External, Smart Contract...</dd>
         </dl>
         <dl>
           <dt>Clover Chain</dt>
