New Design Work

--- a/index.html
+++ b/index.html
@@ -18,19 +18,132 @@
   <div class='head'>
     <div class='content'>
       <a href='index.html' class='logo'></a>
-      <ul class='nav'></ul>
+      <ul class='section-nav'>
+        <li><a href='#home'>Home</a></li>
+        <li><a href='#features'>Features</a></li>
+        <li><a href='#token'>Why Clover</a></li>
+        <li><a href='#ecosystem'>Ecosystem</a></li>
+        <li><a href='https://medium.com/cloverdefi' target='_blank'>Medium</a></li>
+      </ul>
     </div>
   </div>
-  <div class='content column section-main'>
+  <div class='content column section-main' id='home'>
     <div class='left'>
-      <h1>CLOVER</h1>
       <h2>Open DeFi Platform</h2>
-      <h2>Powered by Polkadot</h2>
+      <h3>POWERED BY POLKADOT</h3>
       <p>Clover is a DeFi ecosystem supported by Polkadot parachain technology, which offers on-chain trustless trading services between different chains. Advocating maximum transparency and growth sharing model, Clover will foster a faster and more rigorous environment that allows for more possibilities.</p>
       <a class='button' href='whitepaper.pdf' target='_blank'><img src="image/arrow.svg" />Whitepaper</a>
     </div>
   </div>
-  <div class='back-gray'>
+  <div class='back-black' id='features'>
+    <div class='content section-features'>
+      <h2>NEXT GENERATION DEFI</h2>
+      <p>Clover is a trustless trading platform powered by Polkadot parachain technology, that allows interactions of cross-chain assets and DeFi applications. It is a decentralized money market for lending and borrowing, as well as a liquidity staking protocol. Clover will be governed entirely by its community, and CLV token will derive benefits from Clover’s continuing growth. Together, everyone will contribute to the success of Clover.</p>
+      <div class='feature-area'>
+        <div class='feature-content slider-item'>
+          <dl class='feature-item'>
+            <dt>Swap</dt>
+            <dd>Trade directly from the user’s wallet</dd>
+          </dl>
+          <dl class='feature-item'>
+            <dt>Wrapper</dt>
+            <dd>Trade assets between different chains instantly</dd>
+          </dl>
+          <dl class='feature-item'>
+            <dt>Vault</dt>
+            <dd>Receive tradable staking tokens </dd>
+          </dl>
+          <dl class='feature-item'>
+            <dt>Lending</dt>
+            <dd>Deposit assets to earn interest or borrow</dd>
+          </dl>
+          <dl class='feature-item'>
+            <dt>Stablecoins</dt>
+            <dd>Support native stablecoin issuance</dd>
+          </dl>
+          <dl class='feature-item'>
+            <dt>Governance</dt>
+            <dd>Allow users to implement or change modules</dd>
+          </dl>
+        </div>
+        <ul class='control'>
+          <li class='left-control'></li>
+          <li class='right-control'></li>
+        </ul>
+      </div>
+      <a class='text-button' href='service.html'>Read More</a>
+    </div>
+  </div>
+  <div class='section-product'>
+    <div class='content'>
+      <h2>UNLEASH THE POWER OF CLOVER</h2>
+      <ul>
+        <li>Allow specialized blockchains to communicate with each other.</li>
+        <li>Cross-chain transactions are ensured by Polkadot’s cross-chain message passing technology.</li>
+        <li>Elimination of high gas fees and network congestion.</li>
+        <li>A non-custodial, decentralized P2P trading platform that only allows the account holders to access funds.</li>
+        <li>Trade transactions anonymously without providing any personal information.</li>
+        <li>An open platform that allows community TO propose, vote, and implement changes.</li>
+      </ul>
+    </div>
+  </div>
+  <div class='token-top' id='token'><div class='content'></div></div>
+  <div class='back-gray section-token'>
+    <div class='content'>
+      <h2>CLV TOKEN</h2>
+      <ul>
+        <li>Stake to run nodes</li>
+        <li>Transact on exchanges and marketplaces</li>
+        <li>Earn rewards from platform usage</li>
+        <li>Participate in governance activities for a pre-determined set of parameters</li>
+      </ul>
+      <a href='token.html' class='text-button'>Read More</a>
+    </div>
+  </div>
+  <div class='token-bottom'><div class='content'></div></div>
+  <div class='section-why' id='reasone'>
+    <div class='content'>
+      <h2>WHOLISTIC & SMART DESIGN</h2>
+      <dl>
+          <dt>Dapp Layer</dt>
+          <dd>Swap, Lending, Aggregator, Third Party Apps</dd>
+        </dl>
+        <dl>
+          <dt>Tools</dt>
+          <dd>Wallet, Block Explorer, Polkadot JS...</dd>
+        </dl>
+        <dl>
+          <dt>Protocol Layer</dt>
+          <dd>Protocol External, Smart Contract...</dd>
+        </dl>
+        <dl>
+          <dt>Clover Chain</dt>
+        </dl>
+        <dl>
+          <dt>Polkadot Relay Chain & Parachains</dt>
+        </dl>
+    </div>
+  </div>
+  <div id='ecosystem'>
+    <div class='section-ecosystem'>
+      <div class='content'>
+        <h2>ecosystem</h2>
+        <ul class='ecosystem'>
+          <li class='logo-polkadot'><a href='https://polkadot.network' target='_blank'></a></li>
+          <li class='logo-bithumb'><a href='https://www.bithumb.pro' target='_blank'></a></li>
+          <li class='logo-crust'><a href='https://crust.network' target='_blank'></a></li>
+          <li class='logo-bifrost'><a href='https://bifrost.finance' target='_blank'></a></li>
+          <li class='logo-stafi'><a href='http://stafi.io/' target='_blank'></a></li>
+          <li class='logo-kusama'><a href='https://kusama.network/' target='_blank'></a></li>
+          <li class='logo-plasm'><a href='https://www.plasmnet.io' target='_blank'></a></li>
+          <li class='logo-chainx'><a href='https://chainx.org' target='_blank'></a></li>
+          <li class='logo-substrate'><a href='https://www.parity.io/substrate'></a></li>
+          <li class='logo-phala'><a href='https://phala.network' target='_blank'></a></li>
+        </ul>
+      </div>
+    </div>  
+  </div>
+  <div class='back-gray hide'>
     <div class='content section-reason'>
       <h2>Clover Services</h2>
       <div class='list'>
@@ -61,7 +174,7 @@
       </div>
     </div>
   </div>
-  <div class='section-more'>
+  <div class='section-more hide'>
     <div class='content'>
       <h2>Transform your experience with Clover</h2>
         <div class='back'></div>
@@ -93,7 +206,7 @@
       </div>
     </div>
   </div>
-  <div class='back-black-gray'>
+  <div class='back-black-gray hide'>
     <div class='content column section-productor' id='productor'>
       <div class='left animation'>
         <div class='layer'><img src='image/animation/layer.svg' /></div>
@@ -128,7 +241,7 @@
       </div>
     </div>
   </div>
-  <div class='back-black-gray back-map'>
+  <div>
     <div class='content section-roadmap'>
       <h2>Roadmap</h2>
       <div class='roadmap'>
@@ -136,10 +249,10 @@
           <li class='left-control'></li>
           <li class='right-control'></li>
         </ul>
-        <div class='road-item'>
+        <div class='road-item slider-item'>
           <dl>
             <dt>2020 Q3</dt>
-            <dd class='type'>Clover Team Establishment</dd>
+            <dd class='type'>Clover Team <br/>Establishment</dd>
             <dd>Whitepaper</dd>
             <dd>Official Website</dd>
           </dl>
@@ -176,6 +289,17 @@
             <dd>Support of 3rd party Dapps</dd>
           </dl>
         </div>
+      </div>
+    </div>
+  </div>
+  <div class='back-black' style='background-color: #131b21'>
+    <div class='content column section-news'>
+      <div class='left'>
+        <h2>NEWSLETTER</h2>
+        <p>TO RECEIVE MORE UPDATES AND ANNOUNCEMENTS ABOUT THE DEVELOPMENT OF CLOVER, PLEASE SUBSCRIBE YOUR EMAIL.</p>
+      </div>
+      <div class='right'>
+        <div></div>
       </div>
     </div>
   </div>
