--- a/index.html
+++ b/index.html
@@ -14,16 +14,11 @@
   <link rel='stylesheet' href='style/animation.css' />
   <script src='script/jquery.js'></script>
 </head>
-<body>
+<body class='home'>
   <div class='head'>
     <div class='content'>
       <a href='index.html' class='logo'></a>
       <ul class='section-nav'>
-        <li><a href='#home'>Home</a></li>
-        <li><a href='#features'>Features</a></li>
-        <li><a href='#token'>Why Clover</a></li>
-        <li><a href='#ecosystem'>Ecosystem</a></li>
-        <li><a href='https://medium.com/cloverdefi' target='_blank'>Medium</a></li>
       </ul>
     </div>
   </div>
