--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <div class='row footer-nav'>
         </div>
         <div class='row'>
-          <a>@ 2020 Clover All Rights Reserved</a>
+          <a>&copy; 2020 Clover All Rights Reserved</a>
         </div>
       </div>
       <div class='right social'>
