--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <div class='content'>
       <h2>UNLEASH THE POWER OF CLOVER</h2>
       <ul>
-        <li>Allow specialized blockchains to communicate with each other.</li>
-        <li>Cross-chain transactions are ensured by Polkadot’s cross-chain message passing technology.</li>
-        <li>Elimination of high gas fees and network congestion.</li>
-        <li>A non-custodial, decentralized P2P trading platform that only allows the account holders to access funds.</li>
-        <li>Trade transactions anonymously without providing any personal information.</li>
-        <li>An open platform that allows community TO propose, vote, and implement changes.</li>
+        <li>Allow specialized blockchains to communicate with each other</li>
+        <li>Cross-chain transactions are ensured by Polkadot’s cross-chain message passing technology</li>
+        <li>Elimination of high gas fees and network congestion</li>
+        <li>A non-custodial, decentralized P2P trading platform that only allows the account holders to access funds</li>
+        <li>Trade transactions anonymously without providing any personal information</li>
+        <li>An open platform that allows community to propose, vote, and implement changes</li>
       </ul>
     </div>
   </div>
@@ -304,7 +304,7 @@
         <div class='row footer-nav'>
         </div>
         <div class='row'>
-          <a>@ 2020 Clover All Rights Reserved</a>
+          <a>&copy; 2020 Clover All Rights Reserved</a>
         </div>
       </div>
       <div class='right social'>
