--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       </div>
     </div>
   </div>
-  <div class='back-black' style='background-color: #131b21'>
+  <div class='back-black hide' style='background-color: #131b21'>
     <div class='content column section-news'>
       <div class='left'>
         <h2>NEWSLETTER</h2>
@@ -304,7 +304,7 @@
         <div class='row footer-nav'>
         </div>
         <div class='row'>
-          <a>&copy; 2020 Clover All Rights Reserved</a>
+          <a class='copy-right'></a>
         </div>
       </div>
       <div class='right social'>
