--- a/info.html
+++ b/info.html
@@ -176,7 +176,7 @@
   <div class='back-black'>
 		<div class='container footer'>
       <a href=''>Term of Use Priviacy Policy</a>
-      <a>&copy; 2020 Clover All Rights Reserved</a>
+      <a class='copy-right'></a>
     </div>
   </div>
 	<script src='script/index.js'></script>
