--- a/service.html
+++ b/service.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style/info.css" />
   <script src='script/jquery.js'></script>
 </head>
-<body>
+<body class='service'>
   <div class='back-black'>
     <div class='head dark'>
       <div class='content'>
@@ -95,7 +95,7 @@
         <div class='row footer-nav'>
         </div>
         <div class='row'>
-          <a>&copy; 2020 Clover All Rights Reserved</a>
+          <a class='copy-right'></a>
         </div>
       </div>
       <div class='right social'>
