--- a/token.html
+++ b/token.html
@@ -48,7 +48,7 @@
         </dl>
         <dl>
           <dt>Inflation</dt>
-          <dd>The 5% CLV inflation will be distributed to validators of the network. Parameters can be changed by community governance activities. .</dd>
+          <dd>The 5% CLV inflation will be distributed to validators of the network. Parameters can be changed by community governance activities.</dd>
         </dl>
         <dl>
           <dt>Revenue Re-distribution</dt>
