--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
   </div>
   <div class='back-gray-light'>
     <div class='cotnent section-about'>
-      <h2>A globally distributed team pushing innovation worldwide.</h2>
-      <p>Our team is made up of people passionate about disruptive innovations, located in 10+ countries. We believe that diversity and inclusion drive innovation and adoption across the globe.</p>
+      <h2>Taking Innovations To a Whole Next Level</h2>
+      <p>We are a global and diversified team with presences in over 10+ countries. Our team is made up of industry experts and technologists from leading information technology and blockchain companies including Ethereum, Polkadot, BitGo, Aliababa, Amazon, Oracle, Google, and more.</p>
     </div>
   </div>
   <div class='content section-join'>
-    <h2>Join our team</h2>
-    <p>We are building a global team of industry experts, specialists, and academics. Join us and become part of the team who had previous experience at Amazon, Oracle, Google, Microsoft, Alibaba, Ethereum,Polkadot, BitGo, and more.</p>
+    <h2>Join Our Team</h2>
+    <p>With years of experiences and passions in the space, we are looking to disrupt the decentralized financial world with advanced technologies. Join us today and build the future.</p>
   </div>
   <div class='back-gray-light'>
     <div class='content section-office'>
